--- a/geyser-plugin-interface/Cargo.toml
+++ b/geyser-plugin-interface/Cargo.toml
@@ -11,6 +11,7 @@ documentation = "https://docs.rs/solana-geyser-plugin-interface"
 
 [dependencies]
 log = "0.4.17"
+solana-runtime = { path = "../runtime", version = "=1.14.19" }
 solana-sdk = { path = "../sdk", version = "=1.14.19" }
 solana-transaction-status = { path = "../transaction-status", version = "=1.14.19" }
 thiserror = "1.0.31"
