--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -66,7 +66,7 @@ strum_macros = { workspace = true }
 sys-info = { workspace = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
-tokio = { version = "~1.14.1", features = ["full"] }
+tokio = { version = "1.32.0", features = ["full"] }
 trees = { workspace = true }
 
 [dev-dependencies]
