--- a/Cargo.toml
+++ b/Cargo.toml
@@ -317,7 +317,7 @@ solana-bench-tps = { path = "bench-tps", version = "=1.18.5" }
 solana-bloom = { path = "bloom", version = "=1.18.5" }
 solana-bpf-loader-program = { path = "programs/bpf_loader", version = "=1.18.5" }
 solana-bucket-map = { path = "bucket_map", version = "=1.18.5" }
-solana-cargo-registry = { path = "cargo-registry", version = "=1.18.5" }
+agave-cargo-registry = { path = "cargo-registry", version = "=1.18.5" }
 solana-clap-utils = { path = "clap-utils", version = "=1.18.5" }
 solana-clap-v3-utils = { path = "clap-v3-utils", version = "=1.18.5" }
 solana-cli = { path = "cli", version = "=1.18.5" }
@@ -336,7 +336,7 @@ solana-frozen-abi = { path = "frozen-abi", version = "=1.18.5" }
 solana-frozen-abi-macro = { path = "frozen-abi/macro", version = "=1.18.5" }
 solana-genesis = { path = "genesis", version = "=1.18.5" }
 solana-genesis-utils = { path = "genesis-utils", version = "=1.18.5" }
-solana-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=1.18.5" }
+agave-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=1.18.5" }
 solana-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=1.18.5" }
 solana-gossip = { path = "gossip", version = "=1.18.5" }
 solana-ledger = { path = "ledger", version = "=1.18.5" }
