--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -46,7 +46,7 @@ solana-sbf-rust-realloc = { path = "rust/realloc", version = "=1.18.5", default-
 solana-sbf-rust-realloc-invoke = { path = "rust/realloc_invoke", version = "=1.18.5" }
 solana-sdk = { path = "../../sdk", version = "=1.18.5" }
 solana-transaction-status = { path = "../../transaction-status", version = "=1.18.5" }
-solana-validator = { path = "../../validator", version = "=1.18.5" }
+agave-validator = { path = "../../validator", version = "=1.18.5" }
 solana-zk-token-sdk = { path = "../../zk-token-sdk", version = "=1.18.5" }
 solana_rbpf = "=0.8.0"
 static_assertions = "1.1.0"
